Add postinstall script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive",
     "test:watch": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive --watch",
     "prepublish": "npm run lint && npm run test && npm run clean && npm run build",
-    "preinstall": "npm run lint && npm run test && npm run clean && npm run build"
+    "postinstall": "npm run lint && npm run test && npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
