fix some lint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,10 +11,14 @@
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
     "indent": [2, 4, {"SwitchCase": 1}],
+    "consistent-return": 0,
+    "no-plusplus": 0,
     "comma-dangle": 0,
     "react/jsx-boolean-value": 0,
     "react/no-multi-comp": 0,
     "react/prop-types": 0,
+    "react/prefer-es6-class": 0,
+    "react/no-string-refs": 0,
     "id-length": 0,
     "no-console": 0,
     "no-nested-ternary": 0
